include_HEADERS = \
	libcerror.h

pkginclude_HEADERS = \
	libcerror/definitions.h \
	libcerror/extern.h \
	libcerror/features.h \
	libcerror/types.h

EXTRA_DIST = \
	libcerror.h.in \
	libcerror/definitions.h.in \
	libcerror/features.h.in \
	libcerror/types.h.in

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f libcerror.h
	-rm -f libcerror/definitions.h
	-rm -f libcerror/features.h
	-rm -f libcerror/types.h
	-rm -f Makefile

