MSVSCPP_FILES = \
	cerror_test_error/cerror_test_error.vcproj \
	cerror_test_get_version/cerror_test_get_version.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libcerror.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

